Run testbed job via static node
Run with some terraform and then ansible.

Signed-off-by: Dr. Jens Harbott <harbott@osism.tech>

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ terraform.tfstate*
 terraform.tfstate.d
 terraform/*_custom.tf
 terraform/*_override.tf
+terraform/inventory.*
 terraformrc
 ironic-agent.initramfs
 ironic-agent.kernel
