Add support for deploying OpenStack Zed
Some changes in kolla need to be adapted to.

Use Ubuntu 22.04 as host image instead of 20.04.

Signed-off-by: Dr. Jens Harbott <harbott@osism.tech>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -75,6 +75,12 @@
     timeout: 10800
 
 - job:
+    name: testbed-deploy-yoga
+    parent: testbed-deploy
+    vars:
+      openstack_version: yoga
+
+- job:
     name: testbed-upgrade
     parent: testbed-deploy
     run: playbooks/upgrade.yml
