--- a/environments/manager/configuration.yml
+++ b/environments/manager/configuration.yml
@@ -9,7 +9,7 @@ docker_registry_ansible: harbor.services.osism.tech
 
 ceph_version: pacific
 manager_version: latest
-openstack_version: yoga
+openstack_version: zed
 
 ##########################
 # listener
