--- a/environments/openstack/playbook-bootstrap-basic.yml
+++ b/environments/openstack/playbook-bootstrap-basic.yml
@@ -376,6 +376,8 @@
         name: lukstest
         size: 1
         volume_type: LUKS
+      when: false
+      # TODO: Fix cinder/barbican interaction for Zed
 
     - name: Attach encrypted test volume
       openstack.cloud.server_volume:
@@ -383,6 +385,7 @@
         state: present
         server: test
         volume: lukstest
+      when: false
 
     - name: Get info of server test
       openstack.cloud.server_info:
