Deploy k3s on the management plane & deploy magnum
Part of osism/testbed#1706

Signed-off-by: Christian Berendt <berendt@osism.tech>

--- a/environments/kolla/configuration.yml
+++ b/environments/kolla/configuration.yml
@@ -28,6 +28,7 @@ enable_barbican: "yes"
 enable_ceilometer: "yes"
 enable_gnocchi: "yes"
 enable_ironic: "yes"
+enable_magnum: "yes"
 enable_manila: "yes"
 enable_senlin: "yes"
 enable_skyline: "yes"
