--- a/environments/manager/configuration.yml
+++ b/environments/manager/configuration.yml
@@ -52,7 +52,7 @@ netbox_api_url: "https://{{ netbox_host }}"
 configuration_directory: /opt/configuration
 
 configuration_type: git
-configuration_git_version: main
+configuration_git_version: rgw_S3_test
 configuration_git_host: github.com
 configuration_git_port: 443
 configuration_git_repository: osism/testbed.git
