--- a/environments/ceph/configuration.yml
+++ b/environments/ceph/configuration.yml
@@ -40,14 +40,14 @@ ceph_conf_overrides:
 
   "client.rgw.{{ hostvars[inventory_hostname]['ansible_hostname'] }}.rgw0":
     "rgw content length compat": "true"
-    "rgw enable apis": "swift, s3, admin"
-    "rgw keystone accepted roles": "member, admin"
+    "rgw enable apis": "swift, s3, swift_auth, admin"
+    "rgw keystone accepted roles": "_member_, member, admin"
     "rgw keystone accepted admin roles": "admin"
     "rgw keystone admin domain": "default"
-    "rgw keystone admin password": "{{ swift_keystone_password }}"
+    "rgw keystone admin password": "{{ ceph_rgw_keystone_password }}"
     "rgw keystone admin project": "service"
     "rgw keystone admin tenant": "service"
-    "rgw keystone admin user": "swift"
+    "rgw keystone admin user": "ceph_rgw"
     "rgw keystone api version": "3"
     "rgw keystone url": "https://api-int.testbed.osism.xyz:5000"
     "rgw keystone verify ssl": "false"
@@ -55,3 +55,5 @@ ceph_conf_overrides:
     "rgw s3 auth use keystone": "true"
     "rgw swift account in url": "true"
     "rgw swift versioning enabled": "true"
+    "rgw verify ssl": "true"
+    "rgw enforce swift acls": "true"
